--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -54,9 +55,6 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
-    "@unocss/eslint-config": "^0.52.4",
-    "@unocss/transformer-attributify-jsx": "^0.52.4",
-    "@unocss/webpack": "^0.52.4",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -103,7 +101,6 @@
     "thread-loader": "^3.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "unocss": "^0.52.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
